feat: small improvements
